<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TableRow
        android:gravity="center"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:text=""
            android:textColor="#e47e25"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow android:layout_marginTop="20dp">
        <!--<TextView
			android:id="@+id/lblUsuario"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/usuario"
            android:textColor="#000000"
            android:textSize="20sp">
        </TextView>-->
		<ImageView
        	android:layout_width="wrap_content"
        	android:layout_height="50dp"
        	android:contentDescription="@string/usuario"
        	android:src="@drawable/login_user" />
        <EditText
            android:id="@+id/txtUsuario"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:inputType="text"
            android:text="">
        </EditText>
    </TableRow>
    <TableRow android:layout_marginTop="20dp">
        <!--<TextView
			android:id="@+id/lblSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/senha"
            android:textColor="#000000"
            android:textSize="20sp">
        </TextView>-->
		<ImageView
        	android:layout_width="wrap_content"
        	android:layout_height="50dp"
        	android:contentDescription="@string/senha"
        	android:src="@drawable/login_pass" />
        <EditText
            android:id="@+id/txtSenha"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:text="">
        </EditText>
    </TableRow>
    <TableRow
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/btnLogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="@color/custom_button"
            android:clickable="true"
            android:text="@string/acessar">
        </Button>
    </TableRow>
</TableLayout>